--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ main {
 
 .hero button {
   border: none;
-  background-color: var(--very-dark-blue);
+  background-color: var(--primary-soft-red);
   padding: 1em 2.5em;
   width: fit-content;
 
@@ -146,6 +146,10 @@ main {
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 0.2em;
+}
+
+.hero button:hover {
+  background-color: var(--very-dark-blue);
 }
 
 /* TODO: Add margin later */
