--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@ h2 {
   font-size: 2.2em;
 }
 
+h3 {
+  font-size: 1.1em;
+  font-weight: 800;
+}
+
+h3:hover {
+  color: var(--primary-soft-red);
+}
+
 p {
   font-size: var(--fs);
   line-height: 1.4em;
@@ -102,9 +111,12 @@ main {
     "hero hero side"
     "one two three";
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr) 0.5fr;
 
-  gap: var(--grid-gap);
+  gap: calc(var(--grid-gap) * 3) var(--grid-gap);
+  /* gap: 2em 1em; */
+
+  margin-bottom: 2rem;
 }
 
 .hero {
@@ -112,7 +124,7 @@ main {
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-template-rows: 1fr 0.75fr; */
+  /* grid-template-rows: 1fr 1fr; */
 
   gap: var(--grid-gap);
 }
@@ -120,10 +132,13 @@ main {
 .hero h1 {
   grid-column: 1;
   grid-row: 1fr;
+
+  color: var(--very-dark-blue);
 }
 
 .hero img {
   grid-column: -1/1;
+  width: 100%;
 }
 
 .hero div {
@@ -217,16 +232,22 @@ main {
 
 .o {
   display: flex;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .o-content {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  margin-left: var(--grid-gap);
+}
+
+.o-content h2 {
+  color: var(--grayish-blue);
 }
 
 .o img {
-  height: 10rem;
-}
-
-#hero-image {
-  width: 100%;
+  height: 7rem;
 }
